# UserWitchDevices

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
AuthUser/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
AuthUser/migrations/: 0001_initial.py
AuthWithDevices/: asgi.py  settings.py  urls.py  wsgi.py
